chore: Update page layout to fix overflow issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -66,7 +66,5 @@
   }
   html {
     overflow-x: hidden !important;
-    width: 100%;
-    height: 100%;
   }
 }
